# vitaliy_avdoshkin_HomeWork_8

./: .env.sample  READMY.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
lms/: serializers.py  urls.py  views.py
lms/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
